syntax = "proto3";

package game_service;

import "battle.proto";
import "game.proto";

option go_package = "server/src/proto";


message RoomDetailNotify {
  uint64  be_notified_uid = 1; // 被通知的用户ID
  game.RoomDetail room = 2;
}

// 游戏开始通知
message GameStartNotify {
  uint64  be_notified_uid = 1; // 被通知的用户ID
  game.GameStartNotification game_start = 2;
}

// 游戏结束通知
message GameEndNotify {
  uint64  be_notified_uid = 1; // 被通知的用户ID
  battle.GameEndNotification game_end = 2;
}

// 匹配结果通知请求
message MatchResultNotifyRequest {
  uint64 be_notified_uid = 1; // 被通知的用户ID
  game.MatchResultNotify match_result = 2;
}


service GameRpcService {
  rpc RoomStatusNotifyRpc(RoomDetailNotify) returns (battle.NotifyResponse);
  rpc GameStateNotifyRpc(battle.GameStateNotify) returns (battle.NotifyResponse);
  rpc PlayerActionNotifyRpc(battle.PlayerActionNotify) returns (battle.NotifyResponse);
  rpc GameStartNotifyRpc(GameStartNotify) returns (battle.NotifyResponse);
  rpc GameEndNotifyRpc(GameEndNotify) returns (battle.NotifyResponse);
  rpc MatchResultNotifyRpc(MatchResultNotifyRequest) returns (battle.NotifyResponse);
}